@@ -1,2 +1,9 @@
 # kahoot
 Kahoot game implemented by javafx
+to run it you should write 
+javac --module-path "Path to your javafx lib folder" --add-modules javafx.controls,javafx.fxml QuizMaker.java
+java --module-path "Path to your javafx lib folder" --add-modules javafx.controls,javafx.fxml QuizMaker
+And to run player write these two lines but instead of QuizMaker write Player.
+Also there is a method to write questions for this project. 
+First is fill-in questions(write {blank} to your question description to define it as a fill-in).
+Seconf is test question(first line is question description and the next line is the correct answer and other 3 lines are other options)
